<resources>
    <string name="app_name">Bottom Navigation Bar</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_video">Watch</string>
    <string name="menu_wall">Trang cá nhân</string>
    <string name="menu_noti">Thông báo</string>
    <string name="menu_menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>