<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home"></item>
    <item
        android:id="@+id/menu_video"
        android:icon="@drawable/video"
        android:title="@string/menu_video"></item>
    <item
        android:id="@+id/menu_wall"
        android:icon="@drawable/wall"
        android:title="@string/menu_wall"></item>
    <item
        android:id="@+id/menu_noti"
        android:icon="@drawable/noti"
        android:title="@string/menu_noti"></item>
    <item
        android:id="@+id/menu_menu"
        android:icon="@drawable/menu"
        android:title="@string/menu_menu"></item>

</menu>